# hydro_src_BA

./: Bachelorarbeit_beispiel.cc  CMakeLists.txt  analyse_1x1.cc  analyse_1x1_diag.cc  analyse_1x1_fixedWidth.cc  analyse_3x3.cc  analyse_diag.cc  bachelorarbeit_withOriginalMap.cc  detectRivers_countFragmetns.cc  detectRivers_example_ausarbeitung.cc  detectRivers_oneFunction.cc  detect_rivers01.cc  detect_rivers02.cc  detect_rivers_example.cc  detect_upwards_rivers.cc  explain_refinement.cc  flowFunctions.cc  flowFunctions.hh  plot.ipynb  runtime_all.cc  runtime_detectFragments.cc  test02.cc  test03.cc  test04.cc  test05_borderInTriangle.cc  test06.cc  test06_borderInTriangle.cc  test07_diagonal.cc  test08_overallFlow.cc  test09_headerData.cc  test10_quantityTriangles.cc  test11_seperatetesting.cc  test_grid_functions.cc
